# sgrep

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  LICENSE  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  README_MARKETING_ADDITIONS.md  ROADMAP.md  default-ignore.txt  tarpaulin.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json
.factory/droids/: sgrep.md
.github/workflows/: auto-tag.yml  benchmark.yml  publish-opencode.yml  release.yml
benches/: bench_indexing.rs  bench_search.rs  chunker_bench.rs
benches/repos/: download_repos.sh  generate_synthetic.py
benchmarks/nextjs/: run_benchmark.sh
docs/: EXECUTIVE_SUMMARY.md  advanced-features.md  agents.md  architecture.md  configuration.md  deployment.md  external-vector-db-research.md  implementation-examples.md  offline.md  quickstart.md  troubleshooting.md
modal/: service.py  test_service.py
plugins/opencode/: README.md  index.ts  package.json  plugin.ts
plugins/sgrep/: README.md
plugins/sgrep/.claude-plugin/: plugin.json
plugins/sgrep/hooks/: hooks.json
plugins/sgrep/hooks/scripts/: session-start.sh  session-stop.sh
plugins/sgrep/skills/: SKILL.md
plugins/sgrep/skills/sgrep/: SKILL.md
scripts/: install-skill.sh  install.sh
src/: app.rs  chunker.rs  cli.rs  config.rs  embedding.rs  fts.rs  graph.rs  indexer.rs  lib.rs  main.rs  output.rs  remote.rs  reranker.rs  search.rs  store.rs  threading.rs  watch.rs
src/app/: mod.rs
src/chunker/: language.rs  mod.rs  parser_pool.rs  treesitter.rs
src/cli/: mod.rs
src/config/: mod.rs
src/embedding/: cache.rs  local.rs  mod.rs  providers.rs
src/fts/: mod.rs
src/graph/: extractor.rs  mod.rs  query.rs  symbols.rs
src/indexer/: batch.rs  files.rs  hierarchy.rs  mod.rs
src/modal/: deployer.rs  embedder.rs  mod.rs  reranker.rs
src/output/: mod.rs
src/query_expander/: mod.rs  model.rs
src/remote/: bundle.rs  graph_blob.rs  mod.rs  pinecone.rs  turbopuffer.rs
src/reranker/: mod.rs
src/search/: binary.rs  bm25_cache.rs  config.rs  dedup.rs  engine.rs  file_patterns.rs  file_type.rs  graph_hybrid.rs  hnsw.rs  mod.rs  results.rs  scoring.rs  tests.rs
src/store/: hierarchy.rs  index.rs  mmap.rs  mod.rs  utils.rs
src/turbopuffer/: mod.rs  store.rs
src/watch/: mod.rs
tests/: comprehensive_tests.rs  performance_sla.rs
