[package]
name = "sgrep"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Lightning-fast local-first semantic code search"

[features]
default = ["hashed-embedder"]
hashed-embedder = []
onnx-embedder = ["dep:ort", "dep:tokenizers"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
blake3 = "1.5"
rayon = "1.10"
moka = { version = "0.12", features = ["sync"] }
ignore = "0.4"
globset = "0.4"
notify = { version = "6.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
zstd = "0.13"
directories = "5"
indicatif = "0.17"
console = "0.15"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-md = "0.3"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-toml = { package = "tree-sitter-toml-ng", version = "0.7" }
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
once_cell = "1.19"
uuid = { version = "1.8", features = ["v4", "serde"] }
ctrlc = "3.4"

# Optional advanced embedding support
ort = { version = "2.0.0-rc.3", optional = true }
tokenizers = { version = "0.19", optional = true, default-features = false }
