[package]
name = "sgrep"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rayon = "1.10"
tantivy = "0.22"
notify = "6"
blake3 = "1.5"
globset = "0.4"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
# Optional future: candle-based embeddings (wired later)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[features]
default = []
candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub"]
